--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<scope>runtime</scope>
+	</dependency>
+
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java
+<dependency>
+<groupId>mysql</groupId>
+<artifactId>mysql-connector-java</artifactId>
+<version>8.0.29</version>
+</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
