--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+##### H2 #####
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+##### MySQL #####
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/minirimi
+#spring.datasource.username=userspring
+#spring.datasource.password=parole
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
